Update some columns
